--- a/mentalhelp/src/App.css
+++ b/mentalhelp/src/App.css
@@ -18,16 +18,28 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.shell {
+  max-width: 98.9vw;
+}
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.side-spacer {
+  background-color: lightgrey
+}
+
+.page {
+  height: 100vh
+}
+
+.button-container {
+  padding: 20px;
+  display: inline-block;
+}
+
+.input-question-text {
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
