--- a/mentalhelp/src/App.css
+++ b/mentalhelp/src/App.css
@@ -16,6 +16,12 @@
   padding: 20px 0 0 0
 }
 
+.slider-container > div {
+  height: 40px;
+}
+.submission {
+  flex-direction: column
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -37,13 +43,16 @@
 .side-spacer {
   background-color: lightgrey
 }
-
+.form-error {
+  color: red;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 .page {
   height: auto
 }
 
 .button-container {
-  padding: 20px;
+  padding: 0 0 0 30px;
   display: inline-block;
 }
 
