--- a/mentalhelp/src/App.css
+++ b/mentalhelp/src/App.css
@@ -60,3 +60,18 @@
   font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+.custom-tooltip {
+    display: inline-block;
+    margin: 10px 20px;
+    opacity: 1;
+    position: relative;
+}
+
+.custom-tooltip .tooltip-inner {
+  background: #0088cc;
+}
+
+.custom-tooltip.top .tooltip-arrow {
+  border-top-color: #0088cc;
+}
